# cifar10-experiments-2

./: .gitignore  pyproject.toml
experiments/: hyperparameters.py  unbalanced.py
notebooks/: cifar100lt.ipynb  exp1.ipynb  load_test.ipynb  open_set.ipynb  vit_finetune.ipynb  wandb.ipynb
scripts/: dataset_CIFAR100LT.py
src/hw2/: __init__.py  open_set.py  types_.py  util.py  visualization.py
src/hw2/data/: cifar100_lt.py
src/hw2/experiments/: cnn_basic.py  hyperparameters.py
src/hw2/models/: cnn_basic.py  inception_v3.py  mlp.py  resnet.py  resnet18.py  vit.py
src/hw2/utils/: __init__.py  lr_scheduler.py  recursive_reload.py
tests/: conftest.py  models.py  util.py  visualization.py
tests/experiments/: cnn_basic.py
