[project]
name = "hw2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "transformers>=4.45.2",
    "pyright>=1.1.384",
    "pillow>=10.4.0",
    "jupyter>=1.1.1",
    "pip>=24.2",
    "scikit-learn>=1.5.2",
    "datasets>=3.1.0",
    "notebook>=7.2.2",
    "types-pillow>=10.2.0.20240822",
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
include = ["src"]
defineConstant = { DEBUG = true }
stubPath = "src/stubs"
pythonVersion = "3.12"
